fixed 'snappy' collapse animation

--- a/account/static/css/base-sidenav.css
+++ b/account/static/css/base-sidenav.css
@@ -1,36 +1,32 @@
-/* side-menu*/
-
 .nav-side-menu {
-  position: fixed;
-  top: 0px;
   overflow: auto;
-  width: 12%;
-  height: 100%;
-  color: #e1ffff;
-  background-color: #2e353d;
   font-family: verdana;
   font-size: 12px;
   font-weight: 200;
+  background-color: #2e353d;
+  position: fixed;
+  top: 0px;
+  width: 12%;
+  height: 100%;
+  color: #e1ffff;
 }
-
 .nav-side-menu .brand {
+  background-color: #23282e;
+  line-height: 50px;
   display: block;
   text-align: center;
-  background-color: #23282e;
   font-size: 14px;
-  line-height: 50px;
 }
-
 .nav-side-menu .toggle-btn {
   display: none;
 }
-
-.nav-side-menu ul, .nav-side-menu li {
-  margin: 0px;
-  padding: 5px;
+.nav-side-menu ul,
+.nav-side-menu li {
   list-style: none;
-  cursor: pointer;
+  padding: 0px;
+  margin: 0px;
   line-height: 35px;
+  cursor: pointer;
   /*
     .collapsed{
        .arrow:before{
@@ -45,78 +41,73 @@
      }
 */
 }
-
-.nav-side-menu ul :not(collapsed) .arrow:before, .nav-side-menu li :not(collapsed) .arrow:before {
-  display: inline-block;
-  float: right;
-  padding-right: 10px;
-  padding-left: 10px;
-  content: "\f078";
-  vertical-align: middle;
+.nav-side-menu ul :not(collapsed) .arrow:before,
+.nav-side-menu li :not(collapsed) .arrow:before {
   font-family: FontAwesome;
+  content: "\f078";
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  vertical-align: middle;
+  float: right;
 }
-
-.nav-side-menu ul .active, .nav-side-menu li .active {
+.nav-side-menu ul .active,
+.nav-side-menu li .active {
   border-left: 3px solid #d19b3d;
   background-color: #4f5b69;
 }
-
-.nav-side-menu ul .sub-menu li.active, .nav-side-menu li .sub-menu li.active {
+.nav-side-menu ul .sub-menu li.active,
+.nav-side-menu li .sub-menu li.active {
   color: #d19b3d;
 }
-
-.nav-side-menu ul .sub-menu li.active a, .nav-side-menu li .sub-menu li.active a {
+.nav-side-menu ul .sub-menu li.active a,
+.nav-side-menu li .sub-menu li.active a {
   color: #d19b3d;
 }
-
-.nav-side-menu ul .sub-menu li, .nav-side-menu li .sub-menu li {
-  margin-left: 0px;
-  border: none;
-  border-bottom: 1px solid #23282e;
+.nav-side-menu ul .sub-menu li,
+.nav-side-menu li .sub-menu li {
   background-color: #181c20;
+  border: none;
   line-height: 28px;
+  border-bottom: 1px solid #23282e;
+  margin-left: 0px;
 }
-
-.nav-side-menu ul .sub-menu li:hover, .nav-side-menu li .sub-menu li:hover {
+.nav-side-menu ul .sub-menu li:hover,
+.nav-side-menu li .sub-menu li:hover {
   background-color: #020203;
 }
-
-.nav-side-menu ul .sub-menu li:before, .nav-side-menu li .sub-menu li:before {
-  display: inline-block;
-  padding-right: 10px;
-  padding-left: 10px;
-  content: "\f105";
-  vertical-align: middle;
+.nav-side-menu ul .sub-menu li:before,
+.nav-side-menu li .sub-menu li:before {
   font-family: FontAwesome;
+  content: "\f105";
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  vertical-align: middle;
 }
-
 .nav-side-menu li {
   padding-left: 0px;
-  border-bottom: 1px solid #23282e;
   border-left: 3px solid #2e353d;
+  border-bottom: 1px solid #23282e;
 }
-
 .nav-side-menu li a {
   text-decoration: none;
   color: #e1ffff;
 }
-
 .nav-side-menu li a i {
+  padding-left: 10px;
   width: 20px;
   padding-right: 20px;
-  padding-left: 10px;
 }
-
 .nav-side-menu li:hover {
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
   border-left: 3px solid #d19b3d;
   background-color: #4f5b69;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
 }
-
 @media (max-width: 767px) {
   .nav-side-menu {
     position: relative;
@@ -124,32 +115,30 @@
     margin-bottom: 10px;
   }
   .nav-side-menu .toggle-btn {
-    position: absolute;
-    z-index: 10 !important;
-    top: 10px;
-    right: 10px;
     display: block;
-    width: 40px;
-    padding: 3px;
     cursor: pointer;
-    text-align: center;
-    color: #000;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 10 !important;
+    padding: 3px;
     background-color: #ffffff;
+    color: #000;
+    width: 40px;
+    text-align: center;
   }
   .brand {
-    padding-left: 20px;
     text-align: left !important;
     font-size: 22px;
+    padding-left: 20px;
     line-height: 50px !important;
   }
 }
-
 @media (min-width: 767px) {
   .nav-side-menu .menu-list .menu-content {
     display: block;
   }
 }
-
 body {
   margin: 0px;
   padding: 0px;
